Modified IMUSensor to eliminate FindBugs Warnings